--- a/styles.css
+++ b/styles.css
@@ -97,3 +97,31 @@ p {
   padding-right: 10%;
   padding-left: 15%;
 }
+
+
+.image-gallery {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  margin: 5% 0 0 29%;
+}
+
+.image-gallery > li {
+  /* flex: 1 1 auto; */
+  height: 300px;
+  cursor: pointer;
+  position: relative;
+}
+
+.image-gallery li img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  vertical-align: middle;
+  border-radius: 5px;
+}
+
+.image-gallery::after {
+  content: "";
+  flex-grow: 999;
+}
